--- a/backend/public/sell-item/style.css
+++ b/backend/public/sell-item/style.css
@@ -54,6 +54,7 @@ form {
 .container form .imgs .addimg {
     display: grid;
     grid-template-columns: auto auto auto;
+    
 }
 
 .container form .imgs .addimg label {
@@ -110,22 +111,24 @@ form {
     outline: none;
     border-color: var(--accent);
 }
-
-.container form .product-information .product-discription textarea {
+.container form .product-information .ai {
+position: relative;
+}
+.container form .product-information .ai textarea {
     overflow: auto;
     padding: 10px;
     height: 150px;
     resize: vertical;
+width: 95%;
 }
-
-.container form .product-information .product-discription .ai-btn {
-display: flex;
+.container form .product-information .ai .ai-btn {
 position: absolute;
 background-color: var(--accent);
 border-radius: 15px;
-right: 25%;
-margin-top: 50px;
-cursor: pointer;
+right: 10%;
+top: 0;
+margin-top: 10px;
+cursor: pointer; 
 }
 .container form #same {
     display: flex;
