--- a/backend/views/product/index.ejs
+++ b/backend/views/product/index.ejs
@@ -129,16 +129,16 @@
           <table cellpadding="20px">
             <tr>
               <td>Condition</td>
-              <td> <%= locals.product_condition %></td>
+              <td> <%= locals.condition %></td>
             </tr>
             <tr>
               <td>Category</td>
               <td> <%= locals.categories[0] %></td>
             </tr>
-            <tr>
+            <!-- <tr>
               <td>Brand</td>
               <td> <%= locals.brand %></td>
-            </tr>
+            </tr> -->
             <tr>
               <td>Posted</td>
               <td> <%= locals.created_at.split("T")[0] %></td>
