--- a/backend/public/home/style.css
+++ b/backend/public/home/style.css
@@ -153,6 +153,7 @@ grid-template-columns: 1fr;
     border-radius: 20px;
     color: var(--text-primary);
     margin-bottom: 20px;
+    border: 1px solid var(--card-border)
 }
 .one-proudct .proimg{
     height: 220px;
@@ -160,8 +161,9 @@ grid-template-columns: 1fr;
 .one-proudct .proimg img {
     height: 100%;
     width: 100%;
-    object-fit: cover;
     border-radius: 10% 10% 0 0;
+    object-fit: contain;
+    background-color: var(--background);
 }
 .one-proudct .proinfo{
     margin-left: 15px;
