--- a/backend/public/sell-item/style.css
+++ b/backend/public/sell-item/style.css
@@ -53,7 +53,9 @@ form {
 
 .container form .imgs .addimg {
     display: grid;
-    grid-template-columns: auto auto auto;
+    place-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    /* gap: 15px; */
     
 }
 
@@ -69,6 +71,8 @@ form {
     background-repeat: no-repeat;
     background-size: cover;
     position:relative;
+    text-align: center;
+    max-width: 250px;
 }
 
 .container form .imgs .addimg label:hover {
@@ -207,7 +211,4 @@ transition: .5s;
         margin: 100px 20px;
     }
 
-    .container form .imgs .addimg {
-        grid-template-columns: 1fr 1fr;
-    }
 }
