--- a/backend/views/product/index.ejs
+++ b/backend/views/product/index.ejs
@@ -120,7 +120,7 @@
       <div class="description">
         <h2>Description</h2>
         <hr>
-        <p><%= locals.product_description %></p>
+        <pre><%= locals.product_description %></pre>
       </div>
       <div class="details">
         <h2>Details</h2>
