--- a/backend/public/sell-item/style.css
+++ b/backend/public/sell-item/style.css
@@ -56,7 +56,7 @@ form {
     place-items: center;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     /* gap: 15px; */
-    
+
 }
 
 .container form .imgs .addimg label {
@@ -70,7 +70,7 @@ form {
     cursor: pointer;
     background-repeat: no-repeat;
     background-size: cover;
-    position:relative;
+    position: relative;
     text-align: center;
     max-width: 250px;
 }
@@ -115,30 +115,40 @@ form {
     outline: none;
     border-color: var(--accent);
 }
+
 .container form .product-information .ai {
-position: relative;
+    position: relative;
 }
+
 .container form .product-information .ai textarea {
     overflow: auto;
     padding: 10px;
     height: 150px;
     resize: vertical;
     width: 95%;
-    
-}
-.container form .product-information .ai .ai-btn {
-position: absolute;
-background-color: var(--accent);
-border-radius: 7px;
-right: 3%;
-top: 0;
-margin-top: 10px;
-cursor: pointer;
-color: white; 
-border: 2px solid var(--input-border);
-height: 40px;
 
 }
+
+.container form .product-information .ai .ai-btn {
+    position: absolute;
+    background-color: var(--accent);
+    border-radius: 7px;
+    right: 5%;
+    top: 0;
+    margin-top: 10px;
+    cursor: pointer;
+    color: white;
+    border: 2px solid var(--input-border);
+    height: 40px;
+    font-weight: 800;
+    font-size: 14px;
+    opacity: 0.5;
+}
+
+.container form .product-information .ai .ai-btn:hover {
+    opacity: 1;
+}
+
 .container form #same {
     display: flex;
     flex-direction: column;
@@ -185,10 +195,10 @@ height: 40px;
     margin: 30px;
     align-self: center;
     cursor: pointer;
-transition: .5s;
+    transition: .5s;
 }
 
-.remove-image-btn{
+.remove-image-btn {
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
     border-radius: 50%;
@@ -203,7 +213,7 @@ transition: .5s;
 
 .container form .submit-btn:hover {
     transform: translateY(-5px);
-     background-color: var(--accent-hover);
+    background-color: var(--accent-hover);
 }
 
 @media (max-width:767px) {
