--- a/backend/views/product/index.ejs
+++ b/backend/views/product/index.ejs
@@ -104,7 +104,7 @@
     <div class="left-container">
       <div class="pictures">
         <div class="main-img">
-          <img src="<%= locals.images[0] || "https://placehold.co/600x400" %>" alt="Main product image">
+          <img src="<%= locals.images[0] || "https://placehold.co/600x400" %>" alt="Main product image" id="main-img">
         </div>
         <div class="some">
           <% 
