fix: update button text for login, registration, and product listing processes for better user feedback

--- a/backend/public/product/style.css
+++ b/backend/public/product/style.css
@@ -210,6 +210,7 @@ hr {
 .left-container .description pre {
   margin-left: 40px;
   text-wrap: auto;
+  font-family: 'Inter';
 }
 
 .left-container .details {
