--- a/backend/public/home/style.css
+++ b/backend/public/home/style.css
@@ -145,6 +145,7 @@ grid-template-columns: 1fr;
 }
 .one-proudct{
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
     width: 95%;
     background-color: var(--card-bg);
@@ -153,7 +154,8 @@ grid-template-columns: 1fr;
     border-radius: 20px;
     color: var(--text-primary);
     margin-bottom: 20px;
-    border: 1px solid var(--card-border)
+    border: 1px solid var(--card-border);
+    height: 98%;
 }
 .one-proudct .proimg{
     height: 220px;
