--- a/backend/public/login/style.css
+++ b/backend/public/login/style.css
@@ -4,10 +4,13 @@ body{
   flex-direction: column;
   justify-content: center;
   min-height: 100vh;
+  padding: 20px;
 }
-
+nav{
+margin-left: -20px;
+}
 .form-con{
-  margin-top: 150px;
+  margin: 150px;
   align-self: center;
   height: fit-content;
 }
