feat: update product editing interface with appropriate button text and instructions

--- a/backend/views/edit/index.ejs
+++ b/backend/views/edit/index.ejs
@@ -54,7 +54,7 @@
     <form action="">
       <h1 class="title">Edit Your Product</h1>
       <p class="container-p">
-        Fill out the form below to list your item for sale on Pay&pray.
+        Fill out the form below to edit your item.
       </p>
       <div class="imgs" style="display: none;">
         <h3>📸 Product Images</h3>
@@ -129,7 +129,7 @@
             pattern="[+[0-9]]*" id="phone-input" required />
         </div>
       </div>
-      <button class="submit-btn" id="list-product-btn">List Your Product</button>
+      <button class="submit-btn" id="list-product-btn">Edit Your Product</button>
     </form>
   </div>
   <footer>
