--- a/backend/public/my-account/style.css
+++ b/backend/public/my-account/style.css
@@ -23,6 +23,10 @@ nav {
     align-self: flex-start;
 }
 
+.info h2 {
+    color: var(--text-primary);
+}
+
 .container .profile i {
     width: 80px;
     height: 80px;
@@ -42,7 +46,7 @@ nav {
 .container .profile p {
     color: var(--text-secondary);
 }
-
+    
 .primary-button{
     background-color: var(--accent);
     border: none;
