--- a/backend/public/my-account/style.css
+++ b/backend/public/my-account/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: var(--background);
-    padding: 20px;
+    padding: 0px 20px 0px 20px;
 }
 
 nav {
@@ -8,7 +8,7 @@ nav {
 }
 
 .container {
-    margin: 100px auto;
+    margin: 100px auto 0px;
     display: flex;
     flex-direction: column;
     max-width: 1100px;
