--- a/backend/views/my-account/index.ejs
+++ b/backend/views/my-account/index.ejs
@@ -179,11 +179,12 @@
       <% }) %>
     </div>
   </div>
+  </div>
 
 
 
 
-  <!-- <footer>
+  <footer>
   <div class="contact">
     <div class="About">
       <h3>About Us</h2>
@@ -205,7 +206,7 @@
   <div class="copyright">
     <p>&copy; 2025 Used Market. All rights reserved.</p>
   </div>
-</footer> -->
+</footer>
   <script src="/js/toggle-theme.js"></script>
   <script src="/js/nav.js"></script>
   <script src="/my-account/script.js"></script>
