--- a/backend/views/my-account/index.ejs
+++ b/backend/views/my-account/index.ejs
@@ -67,7 +67,9 @@
     <div class="profile">
       <i class="fa-solid fa-user"></i>
       <div class="info">
-        <h2><%= locals.user.full_name %></h2>
+        <h2>
+          <%= locals.user.full_name %>
+        </h2>
         <p>Member since January 2025</p>
       </div>
     </div>
@@ -132,20 +134,28 @@
         <div class="info-item">
           <div class="items">
             <label for="fullname">Full Name</label>
-            <p id="full-name"><%= locals.user.full_name %></p>
+            <p id="full-name">
+              <%= locals.user.full_name %>
+            </p>
           </div>
 
           <div class="items">
             <label for="email">Email</label>
-            <p id="email"><%= locals.user.email %></p>
+            <p id="email">
+              <%= locals.user.email %>
+            </p>
           </div>
           <div class="items">
             <label for="phone">Phone</label>
-            <p id="phone"><%= locals.user.phone %></p>
+            <p id="phone">
+              <%= locals.user.phone %>
+            </p>
           </div>
           <div class="items">
             <label for="location">Location</label>
-            <p id="location"><%= locals.user.user_address %></p>
+            <p id="location">
+              <%= locals.user.user_address %>
+            </p>
           </div>
         </div>
       </div>
@@ -160,75 +170,63 @@
 
       </div>
     </div>
-  <div class="my-products-section" style="display: none;">
-    <div class="header">
-      <h2>My Products</h2>
-      <a href="/sell-item" style="text-decoration: none;" class="add-product-button primary-button">+ Add Product</a>
-    </div>
-    <div class="products-list">
-      <% locals.products.forEach(product => { %>
-      <div class="product-item">
-        <img src="<%= product.mainImage %>" alt="<%= product.title %>" />
-        <h3><%= product.title%></h3>
-        <p>$<%= product.price %></p>
-        <div class="buttons-container">
-          <a href="/edit/<%= product.product_id %>" class="edit-product-button primary-button">Edit</a>
-          <button class="delete-product-button primary-button" data-product-id="<%= product.product_id %>">Delete</button>
-        </div>
+    <div class="my-products-section" style="display: none;">
+      <div class="header">
+        <h2>My Products</h2>
+        <a href="/sell-item" style="text-decoration: none;" class="add-product-button primary-button">+ Add Product</a>
       </div>
-      <% }) %>
+      <div class="products-list">
+        <% locals.products.forEach(product=> { %>
+          <div class="product-item">
+            <img src="<%= product.mainImage %>" alt="<%= product.title %>" />
+            <h3>
+              <%= product.title%>
+            </h3>
+            <p>$<%= product.price %>
+            </p>
+            <div class="buttons-container">
+              <a href="/edit/<%= product.product_id %>" class="edit-product-button primary-button">Edit</a>
+              <button class="delete-product-button primary-button"
+                data-product-id="<%= product.product_id %>">Delete</button>
+            </div>
+          </div>
+          <% }) %>
+      </div>
     </div>
-  </div>
   </div>
 
 
 
 
   <footer>
-      <div class="footer-content">
-        <div class="fotter-links">
-          <a href="">About</a>
-          <a href="">Contact</a>
-          <a href="">Privacy</a>
-          <a href="">Terms</a>
-        </div>
-        <div class="footer-sochal">
-          <a href="">
-            <img
-              src="https://cdn-icons-png.flaticon.com/512/733/733561.png"
-              alt="LinkedIn"
-              class="social-icon"
-            />
-          </a>
-          <a href="https://github.com/Abbas49/Web-Project" target="_blank">
-            <img
-              src="https://cdn-icons-png.flaticon.com/512/733/733553.png"
-              alt="GitHub"
-              class="social-icon"
-            />
-          </a>
-          <a href="">
-            <img
-              src="https://cdn-icons-png.flaticon.com/512/733/733547.png"
-              alt="Facebook"
-              class="social-icon"
-            />
-          </a>
-          <a href="">
-            <img
-              src="https://cdn-icons-png.flaticon.com/512/733/733558.png"
-              alt="Instagram"
-              class="social-icon"
-            />
-          </a>
-        </div>
+    <div class="footer-content">
+      <div class="fotter-links">
+        <a href="">About</a>
+        <a href="">Contact</a>
+        <a href="">Privacy</a>
+        <a href="">Terms</a>
       </div>
+      <div class="footer-sochal">
+        <a href="">
+          <img src="https://cdn-icons-png.flaticon.com/512/733/733561.png" alt="LinkedIn" class="social-icon" />
+        </a>
+        <a href="https://github.com/Abbas49/Web-Project" target="_blank">
+          <img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub" class="social-icon" />
+        </a>
+        <a href="">
+          <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" class="social-icon" />
+        </a>
+        <a href="">
+          <img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram" class="social-icon" />
+        </a>
+      </div>
+    </div>
 
-      <div class="footer-bottom">
-        <p>&copy; 2025 Call2Buy. All rights reserved.</p>
-        <p>Developed with ❤️ by <a href="">Call2Buy Team</a></p>
-      </div>
-    </footer>
+    <div class="footer-bottom">
+      <p>&copy; 2025 Call2Buy. All rights reserved.</p>
+      <p>Developed with ❤️ by <a href="">Call2Buy Team</a></p>
+    </div>
+  </footer>
   <script src="/js/toggle-theme.js"></script>
   <script src="/js/nav.js"></script>
   <script src="/my-account/script.js"></script>
